# mahiru

./: .coveragerc  .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  NOTICE  README.rst  mypy.ini  poc.py  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: run_tests.yaml
docker/: base.Dockerfile  docker-compose.yml  init.sh  nginx.conf  registry.Dockerfile  site.Dockerfile  site.conf
docker/assets/: compute-asset-base.Dockerfile  compute-asset.Dockerfile  libmahiru.py  (+4 more)
docs/: Makefile  conf.py  distributed_scenarios.rst  index.rst  make.bat  terminology.rst
mahiru/: __init__.py  __version__.py  replication.py  util.py
net-admin-helper/: .gitignore  config.h  install.sh
poc/: asset_store.py  ddm_client.py  ddm_site.py  definitions.py  local_workflow_runner.py  poc.py  policy.py  policy_evaluator.py  registry.py  workflow.py  workflow_engine.py
proof_of_concept/: __init__.py  __version__.py  asset.py  asset_store.py  ddm_client.py  ddm_site.py  ddm_site_api.py  definitions.py  local_workflow_runner.py  permission_calculator.py  policy.py  policy_evaluator.py  policy_replication.py  registry.py  registry_api.py  registry_api.yaml  replication.py  replication_rest.py  serialization.py  signable.py  site_api.yaml  step_runner.py  validation.py  workflow.py  workflow_engine.py
tests/: conftest.py  test_asset_exchange.py  test_asset_store.py  test_containers.py  test_policy_evaluation.py  test_registry.py  test_replication.py  test_rule_replication.py  test_rule_signatures.py  test_scenarios.py  test_security.py
(+142 files in other folders)
