[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = proof_of_concept

[tool:pytest]
testpaths = proof_of_concept tests
addopts = --mypy --pycodestyle --pydocstyle --cov --cov-report xml --cov-report term --cov-report html

[mypy]
warn_unused_configs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True

[mypy-cryptography.*]
ignore_missing_imports = True

[mypy-docker.*]
ignore_missing_imports = True

[mypy-jsonschema.*]
ignore_missing_imports = True

[mypy-falcon.*]
ignore_missing_imports = True

[mypy-openapi_schema_validator.*]
ignore_missing_imports = True

[mypy-retrying.*]
ignore_missing_imports = True

[mypy-ruamel.*]
ignore_missing_imports = True

[mypy-pytest]
ignore_missing_imports = True

[mypy-tests.*]
# We don't bother with type annotations for tests
ignore_errors = True

[pycodestyle]
max-doc-length = 72

[pydocstyle]
convention = google

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
